# author-clock

./: .clang-format  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CMakeLists.txt  README.md  build_log.txt  partitions.csv  plan.md  plan_v1.md  sdkconfig.defaults
.github/agents/: esp32-idf.agent.md  find-quotes.agent.md
.github/skills/display-spec/: SKILL.md
.github/skills/display-spec/spec/: spec.md
.github/skills/find-missing-quotes/: SKILL.md
.github/skills/gen-fonts/: SKILL.md
.github/skills/waveshare/: SKILL.md
.hooks/: check-env-not-staged.sh  check-sdkconfig-not-staged.sh  validate-partitions-csv.py
CAD/: author_clock-frame.3mf  author_clock.20260411-150723.FCBak  author_clock.20260411-150725.FCBak  author_clock.20260412-125111.FCBak  author_clock.20260417-201659.FCBak  author_clock.20260418-113921.FCBak  author_clock.FCStd  frame_print.3mf
main/: CMakeLists.txt  app_config.h  bmfont_renderer.c  bmfont_renderer.h  display_mgr.c  display_mgr.h  idf_component.yml  main.c  main_phase1.c  main_phase2.c  main_phase3.c  main_phase4.c  ntp_sync.c  ntp_sync.h  nvs_config.c  nvs_config.h  quote_fetcher.c  quote_fetcher.h  quote_reader.c  quote_reader.h  quote_types.h  test_wifi_sta.c  weather_fetcher.c  weather_fetcher.h  weather_icons.h  weather_icons_bmp.h  wifi_prov.c  wifi_prov.h  wifi_sta.c  wifi_sta.h
main/epd/: DEV_Config.c  DEV_Config.h  EPD_7in5_V2.c  EPD_7in5_V2.h  GUI_Paint.c  GUI_Paint.h  fonts.c  fonts.h
main/fonts/: QuicksandBook-Regular-48.c  QuicksandBook-Regular-48.h  bmfont.h  font_bold_24.c  font_bold_24.h  font_bold_36.c  font_bold_36.h  font_bold_48.c  font_bold_48.h  font_book_24.c  font_book_24.h  font_book_36.c  font_book_36.h  font_book_48.c  font_book_48.h  font_select.h
tools/: candidates_reviewed.json  debug_web.sh  find_missing_quotes.py  gen_all_fonts.sh  gen_font.py  gen_quotes_bin.py  gen_weather_icons.py  monitor.sh  pyproject.toml  reset_config.sh  review_candidates.py  time_strings.py
